<resources>
    <string name="app_name">mapsHouse</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">JISA</string>
    <string name="nav_header_subtitle">Jisacompany.sa</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="texto1">LATITUD</string>
    <string name="texto2">LONGITUD</string>
    <string name="texto3">ALTITUD</string>
    <string name="button">MI UBICACIÓN</string>
    <string name="button2">IR AL MAPA</string>
</resources>